deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
        app: webapp

  template:
     metadata:
        name: webapp-deployment
        labels:
          app: webapp
     spec:
        containers:
          - name: Webapp-deployment
            image: anilbichkule/maven-web-app:latest
            ports:
              - containerPort: 8080
