service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: webapp-service
spec:
  selector:
    app: webapp
type: ClusterIP
ports:
 - port: 80
   targetPort: 8080
