ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /LoginWebApp
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
